--- a/src/css/components/steps/step-5.styl
+++ b/src/css/components/steps/step-5.styl
@@ -69,8 +69,8 @@
     .splash__headline
       transform translate3d(0, -5vh, 0)
     .small-text
-      transform translate3d(0,400%,0)
-      bottom 40%
+      // transform translate3d(0, 15vh, 0)
+      // bottom 40%
 
 @media all and (min-width 1050px)
   #step-5
